force-app/application/package/main/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>