force-app/application/package/main/objects/Lead/fields/Annual_Revenue_at_time_of_Lead__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_at_time_of_Lead__c</fullName>
    <label>Annual Revenue at Time of Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>