force-app/application/package/main/objects/Lead/fields/CASESAFEID_Id__c.field-meta.xml
<CustomField>
    <fullName>CASESAFEID_Id__c</fullName>
    <description>Lead Full ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASESAFEID(Id)</label>
    <type>Text</type>
</CustomField>