force-app/application/package/main/objects/Lead/fields/CRA_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>CRA_Business_Number__c</fullName>
    <description>The business number is a 9-digit number assigned to a corporation by the Canada Revenue Agency. It is often required to collect GST/HST or to make payroll deductions when paying employees.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The business number is a 9-digit number assigned to a corporation by the Canada Revenue Agency. It is often required to collect GST/HST or to make payroll deductions when paying employees.</inlineHelpText>
    <label>Business Number</label>
    <length>17</length>
    <type>Text</type>
</CustomField>