force-app/application/package/main/objects/Lead/fields/Existing_Procurement_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Existing_Procurement_Relationship__c</fullName>
    <label>Existing Procurement Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>