force-app/application/package/main/objects/Lead/fields/Previously_Sold_Goods__c.field-meta.xml
<CustomField>
    <fullName>Previously_Sold_Goods__c</fullName>
    <label>Previously Sold Goods?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>