force-app/application/package/main/objects/Lead/fields/Privacy_Policy_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Agreed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Could be GLOBAL - Used to define if the privacy policy was discussed and define the outcome. 
Could be shared among all branches.</description>
    <inlineHelpText>The client must agree to the terms in the privacy policy (refer to guidance at top right).</inlineHelpText>
    <label>Agreed to Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>